--- a/index.css
+++ b/index.css
@@ -9,8 +9,18 @@ form{
     text-align: center;
     background-color: lightblue;
     display: inline-block;
+    padding: 10px;
+}
+
+label{
+    float: left;
+    margin-left: 5px;
 }
 
 input{
     margin: 2px;
+}
+
+button{
+    background-color: lightgreen;
 }
