Border & centered form

--- a/index.css
+++ b/index.css
@@ -1,8 +1,17 @@
+body { 
+    display: flex; 
+    justify-content: center; 
+    align-items:start; 
+    height: 100vh; 
+    margin: 0; 
+  }
+
 #main{
     background-color: bisque;
     display: inline-block;
     padding-left: 25px;
     padding-right: 25px;
+    border-style: solid;
 }
 
 form{
