--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
     margin: 0; 
   }
 
-#main{
+.mainSection{
     background-color: bisque;
     display: inline-block;
     padding-left: 25px;
@@ -14,14 +14,14 @@ body {
     border-style: solid;
 }
 
-form{
+.form{
     text-align: center;
     background-color: lightblue;
     display: inline-block;
     padding: 10px;
 }
 
-label{
+.inputLabel{
     float: left;
     margin-left: 5px;
 }
